@@ -1,4 +1,7 @@
-Revision history for Dancer2-Plugin-MarkdownFilesToHTML
+Revision history for {{$dist->name}}
+
+{{$NEXT}}
+  - attempt fixes for systems with failing smoke tests
 
 0.012     2018-11-06 20:34:30-05:00 America/New_York
   - more documentation improvements
